# visa-sdk-rs

./: .editorconfig  Cargo.toml  LICENSE  README.md
samples/: README.md
samples/hello-world/: .env.sample  Cargo.toml  README.md
samples/hello-world/src/: main.rs
src/: lib.rs
src/api/: constants.rs  mod.rs  result.rs
src/api/foreign_exchange/: mod.rs  regular.rs
src/api/foreign_exchange/regular/: models.rs
src/api/hello_world/: mod.rs
src/api/testkit/: macros.rs
src/client/: builder.rs  client.rs  mod.rs  state.rs  utils.rs
src/client/models/: api_level.rs  config.rs  message_level_encryption.rs  mod.rs  mutual_tls.rs
src/utils/: builder_result.rs  mod.rs
