[package]
name = "visa-sdk"
description = "Lightweight API SDK for api.visa.com, not production ready."
authors = ["Gunawan \"chez14\" Christianto <chris@christianto.net>"]
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.com/chez14/visa-rs"
license-file = "LICENSE"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
mockall_double = "0.3.1"
reqwest = { version = "0.12.8", features = ["native-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
url = "2.5.2"

[dev-dependencies]
mockall = "0.13.0"
mockito = "1.5.0"
tokio = { workspace = true, features = ["full"] }

[workspace]
members = [
    "samples/hello-world",
]

[workspace.dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["full"] }
